# my-cms

./: docker-compose.yml
admin-core/: Cargo.toml  Dockerfile  entrypoint.sh
admin-core/src/: main.rs
admin-frontend/: .env  .prettierrc.cjs  Dockerfile  docker-compose.yml  eslint.config.js  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
admin-frontend/src/: App.tsx  index.css  main.tsx
admin-frontend/src/components/editor/: plate-editor.tsx
admin-frontend/src/components/ui/: block-selection.tsx  blockquote-node-static.tsx  callout-node-static.tsx  checkbox.tsx  code-block-node-static.tsx  code-node-static.tsx  code-node.tsx  column-node-static.tsx  comment-node-static.tsx  comment-node.tsx  comment-toolbar-button.tsx  cursor-overlay.tsx  date-node-static.tsx  editor-static.tsx  equation-node-static.tsx  fixed-toolbar-buttons.tsx  floating-toolbar-buttons.tsx  font-color-toolbar-button.tsx  ghost-text.tsx  heading-node.tsx  highlight-node-static.tsx  hr-node-static.tsx  hr-node.tsx  kbd-node-static.tsx  kbd-node.tsx  link-node-static.tsx  link-node.tsx  media-audio-node-static.tsx  media-audio-node.tsx  media-embed-node.tsx  media-file-node-static.tsx  media-file-node.tsx  media-image-node-static.tsx  media-image-node.tsx  media-video-node-static.tsx  media-video-node.tsx  mention-node-static.tsx  paragraph-node-static.tsx  (+8 more)
admin-frontend/src/hooks/: use-debounce-hook.ts
blog/: .dockerignore  Dockerfile  astro.config.prod.mjs  ecosystem.config.cjs  package.json  update.sh
blog/src/: content.config.ts
blog/src/layouts/: BlogPost.astro
(+6 files in other folders)
