[package]
name = "admin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.2"                                         # 用于解析 Markdown Frontmatter
walkdir = "2"                                               # 遍历文件
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
